[metadata]
name = M2Crypto
version = attr: M2Crypto.__version__
author = Ng Pheng Siong
author_email = ngps@sandbox.rulemaker.net
maintainer = Matej Cepl
maintainer_email = mcepl@cepl.eu
description = A Python crypto and SSL toolkit
long_description = file: README.md
long_description_content_type = text/markdown
keywords =
    cryptography
    openssl
license = BSD-2-Clause
license_file = LICENSES/BSD-2-Clause.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: C
    Programming Language :: Python
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
project_urls =
    home_page = https://sr.ht/~mcepl/m2crypto/
    source = https://git.sr.ht/~mcepl/m2crypto
    documentation = https://m2crypto.readthedocs.io/en/latest/
    report = https://lists.sr.ht/~mcepl/m2crypto
    changelog = https://git.sr.ht/~mcepl/m2crypto/tree/master/item/CHANGES

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
python_requires = >=3.6
install_requires =
    packaging

[options.packages.find]
where=src
exclude =
    contrib*
    docs*
    tests*

[options.package_data]
M2Crypto =
    *.dll
    py.typed
    *.pyi

[egg_info]
tag_build =
tag_svn_revision = 0

[flake8]
; ignore = E402,E501,E731,N806,N803,N802,E265
ignore = E402,N806,N803,N802,E501

[pydocstyle]
ignore = D10,D203,D213

[black]
line-length = 70
skip-string-normalization = true

[mypy]

[mypy-M2Crypto.m2crypto]
# Mypy fails to resolve the relative import of the C-extension
# in the SWIG-generated wrapper file.
disable_error_code = import-not-found
